// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnrollmentUpdate EnrollmentFunding matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="grid-container"
  >
    <a
      class="usa-button usa-button--unstyled text-bold"
      href="/"
    >
      <span
        class="oec-text-with-icon text-underline"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back to summary
      </span>
    </a>
  </div>
  <div
    class="grid-container"
  >
    <h1>
      Update enrollment and funding
    </h1>
    <p
      class="usa-intro"
    >
      Lily Luna Potter
    </p>
    <div
      class="oec-tab-nav"
    >
      <div
        class="oec-tab-nav--header"
      >
        <nav>
          <ul>
            <li>
              <button
                class="oec-tab-nav--tab oec-tab-nav--tab__active"
                type="button"
              >
                Enrollment/Funding
              </button>
            </li>
            <li>
              <button
                class="oec-tab-nav--tab"
                type="button"
              >
                Care 4 Kids
              </button>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="oec-tab-nav--content"
      >
        <h2
          class="font-sans-md margin-top-2 margin-bottom-2"
        >
          Current enrollment
        </h2>
        <div
          class="oec-card oec-card--primary"
        >
          <div
            class="oec-card-cell"
          >
            <div
              class="display-flex flex-justify"
            >
              <div
                class="flex-1"
              >
                <p>
                  Site
                </p>
                <p
                  class="text-bold"
                >
                  Children's Adventure Center
                </p>
              </div>
              <div
                class="flex-1"
              >
                <p>
                  Age group
                </p>
                <p
                  class="text-bold"
                >
                  Preschool
                </p>
              </div>
              <div
                class="flex-2"
              >
                <p>
                  Enrollment dates
                </p>
                <p
                  class="text-bold"
                >
                  02/03/2018 - present
                </p>
              </div>
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <span
                  class="oec-text-with-icon"
                >
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                  >
                    pencil.svg
                  </svg>
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class=""
          />
        </div>
        <div
          class="oec-card oec-card--primary margin-bottom-3"
        >
          <div
            class="oec-card-cell"
          >
            <div
              class="display-flex flex-justify"
            >
               
              <div
                class="flex-1"
              >
                <p>
                  Funding
                </p>
                <p>
                  <span
                    class="usa-tag usa-tag--no-transform bg-blue-50v"
                  >
                    CDC
                  </span>
                </p>
              </div>
              <div
                class="flex-1"
              >
                <p>
                  Space type
                </p>
                <p
                  class="text-bold"
                >
                  Full time
                </p>
              </div>
              <div
                class="flex-2"
              >
                <p>
                  Reporting periods
                </p>
                <p
                  class="text-bold"
                >
                  March 2019 - present
                </p>
              </div>
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <span
                  class="oec-text-with-icon"
                >
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                  >
                    pencil.svg
                  </svg>
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EnrollmentUpdate FamilyIncome matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="grid-container"
  >
    <a
      class="usa-button usa-button--unstyled text-bold"
      href="/"
    >
      <span
        class="oec-text-with-icon text-underline"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back to summary
      </span>
    </a>
  </div>
  <div
    class="grid-container"
  >
    <h1>
      Update family income determination
    </h1>
    <p
      class="usa-intro"
    >
      Lily Luna Potter
    </p>
    <div
      class="margin-top-1"
    >
      <div
        class="display-flex align-center"
      >
        <h2
          class="font-sans-md margin-top-2 margin-bottom-2"
        >
          Current income determination
        </h2>
           
        <button
          class="usa-button usa-button--unstyled"
          type="button"
        >
          Add new income determination
        </button>
      </div>
      <div>
        <div
          class="oec-card oec-card--primary margin-bottom-2"
        >
          <div
            class="oec-card-cell"
          >
            <div
              class="display-flex flex-justify"
            >
              <div
                class="flex-1"
              >
                <p>
                  Household size
                </p>
                <p
                  class="text-bold"
                >
                  5
                </p>
              </div>
              <div
                class="flex-1"
              >
                <p>
                  Income
                </p>
                <p
                  class="text-bold"
                >
                  $22,000.00
                </p>
              </div>
              <div
                class="flex-2"
              >
                <p>
                  Determined on
                </p>
                <p
                  class="text-bold"
                >
                  01/01/2020
                </p>
              </div>
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <span
                  class="oec-text-with-icon"
                >
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                  >
                    pencil.svg
                  </svg>
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class=""
          />
        </div>
      </div>
      <div
        class="display-flex align-center"
      >
        <h2
          class="font-sans-md margin-top-2 margin-bottom-2"
        >
          Past income determinations
        </h2>
      </div>
      <div>
        <div
          class="oec-card oec-card--secondary margin-bottom-2"
        >
          <div
            class="oec-card-cell"
          >
            <div
              class="display-flex flex-justify"
            >
              <div
                class="flex-1"
              >
                <p>
                  Household size
                </p>
                <p
                  class="text-bold"
                >
                  4
                </p>
              </div>
              <div
                class="flex-1"
              >
                <p>
                  Income
                </p>
                <p
                  class="text-bold"
                >
                  $20,000.00
                </p>
              </div>
              <div
                class="flex-2"
              >
                <p>
                  Determined on
                </p>
                <p
                  class="text-bold"
                >
                  01/01/2019
                </p>
              </div>
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <span
                  class="oec-text-with-icon"
                >
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                  >
                    pencil.svg
                  </svg>
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EnrollmentUpdate FamilyInfo matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="grid-container"
  >
    <a
      class="usa-button usa-button--unstyled text-bold"
      href="/"
    >
      <span
        class="oec-text-with-icon text-underline"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back to summary
      </span>
    </a>
  </div>
  <div
    class="grid-container"
  >
    <h1>
      Update family information
    </h1>
    <p
      class="usa-intro"
    >
      Lily Luna Potter
    </p>
    <form
      autocomplete="off"
      class="FamilyInfoForm usa-form"
      novalidate=""
    >
      <h2>
        Address
      </h2>
      <fieldset
        aria-required="true"
        class="grid-gap grid-row usa-fieldset display-inline-block"
        id="family-address"
      >
        <legend
          id="fieldset-legend-family-address"
        >
          <span
            class="usa-sr-only"
          >
            Address
          </span>
        </legend>
        <div
          class="grid-gap grid-col"
        >
          <div
            class="mobile-lg:grid-col-12"
          >
            <div
              class=" usa-form-group"
            >
              <label
                class="usa-label"
                for="addressLine1"
              >
                Address line 1 
              </label>
              <input
                aria-required="true"
                class="usa-input"
                id="addressLine1"
                type="text"
                value="4 Privet Drive"
              />
            </div>
          </div>
          <div
            class="mobile-lg:grid-col-12"
          >
            <div
              class=" usa-form-group"
            >
              <label
                class="usa-label"
                for="addressLine2"
              >
                Address line 2 
                <span
                  class="usa-hint"
                >
                   (optional)
                </span>
              </label>
              <input
                aria-required="false"
                class="usa-input"
                id="addressLine2"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="grid-row grid-gap"
          >
            <div
              class="mobile-lg:grid-col-8 display-inline-block"
            >
              <div
                class=" usa-form-group"
              >
                <label
                  class="usa-label"
                  for="town"
                >
                  Town 
                </label>
                <input
                  aria-required="true"
                  class="usa-input"
                  id="town"
                  type="text"
                  value="Hogsmeade"
                />
              </div>
            </div>
            <div
              class="mobile-lg:grid-col-4 display-inline-block"
            >
              <div
                class="usa-form-group"
              >
                <div
                  class=""
                />
                <label
                  class="usa-label"
                  for="state"
                >
                  State
                </label>
                <select
                  aria-required="true"
                  class="usa-select"
                  id="state"
                  name="state"
                >
                  <option
                    value=""
                  >
                    - Select -
                  </option>
                  <option
                    value="CT"
                  >
                    CT
                  </option>
                  <option
                    value="MA"
                  >
                    MA
                  </option>
                  <option
                    value="NY"
                  >
                    NY
                  </option>
                  <option
                    value="RI"
                  >
                    RI
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="mobile-lg:grid-col-6"
          >
            <div
              class=" usa-form-group"
            >
              <label
                class="usa-label"
                for="zip"
              >
                ZIP Code 
              </label>
              <input
                aria-required="true"
                class="usa-input"
                id="zip"
                type="text"
                value="77777"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <h2>
        Other
      </h2>
      <div
        class="usa-checkbox margin-top-3"
      >
        <input
          class="usa-checkbox__input"
          id="foster"
          type="checkbox"
          value="foster"
        />
        <label
          class="usa-checkbox__label"
          for="foster"
        >
          Child lives with foster family
        </label>
      </div>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="homelessness"
            type="checkbox"
            value="homelessness"
          />
          <label
            class="usa-checkbox__label"
            for="homelessness"
          >
            Family has experienced homelessness or housing insecurity
          </label>
        </div>
        <p
          class="usa-hint text-italic"
        >
          Indicate if you are aware that the family has experienced housing insecurity, including overcrowded housing, within the last year.
        </p>
      </div>
      <input
        class="usa-button"
        type="submit"
        value="Save"
      />
    </form>
  </div>
</DocumentFragment>
`;
